# bikecontroller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_demo_esp_littlefs.csv  sdkconfig.defaults
components/u8g2/: CMakeLists.txt  README.md
components/u8g2/csrc/: u8g2_d_setup.c  u8x8_d_st7567.c
components/u8g2/include/: u8g2.h
main/: 74hc595.c  74hc595.h  CMakeLists.txt  Kconfig.projbuild  i2c.c  i2c.h  led.c  led.h  main.c  misc.h  mpu9250.c  mpu9250.cpp  mpu9250.h  power.c  power.h  record.cpp  record.h  sdcard.c  sdcard.h  spi.c  spi.h  storage.c  storage.h  tcp_client_v4.c  tcp_client_v4.h  u8g2_user.c  u8g2_user.h  uart.c  uart.h  wheelspeed.c  wheelspeed.h  wifi.c
tools/: plotdata.py  server.py
